[package]
name = "runic"
version = "0.1.0"
authors = ["Brian Rowe <briprowe@gmail.com>"]
edition = "2018"
description = "WIP - A distributed data processing pipeline platform."
license = "MIT"
repository = "https://github.com/briprowe/runic"

[dependencies]
etcd = "0.9.0"
tokio = "0.1.20"
futures = "0.1.27"
failure = "0.1.5"
hyper = "0.12.29"